-Fixed admin overlay by reducing header z-index, drag template broke though.

--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@ font-family: 'Oswald', sans-serif;
 }
 
 header {
-z-index: 50000;
+z-index: 500;
 border-top: 1px solid #fff;
 display: block;
 background-color: #111;
